<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/navigation_mapview">

    <fragment
        android:id="@+id/navigation_mapview"
        android:name="com.dija.go4lunch.ui.MapsFragment"
        android:label="@string/map_view"
        tools:layout="@layout/fragment_maps"/>

    <fragment
        android:id="@+id/navigation_listview"
        android:name="com.dija.go4lunch.ui.RestaurantListFragment"
        android:label="@string/list_view"
        tools:layout="@layout/fragment_restaurant_list"/>

    <fragment
        android:id="@+id/navigation_workmates"
        android:name="com.dija.go4lunch.ui.WorkmateListFragment"
        android:label="@string/workmates"
        tools:layout="@layout/fragment_workmate_list"/>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.dija.go4lunch.ui.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat"/>

    <fragment
        android:id="@+id/navigation_lunch"
        android:name="com.dija.go4lunch.ui.RestaurantDetailFragment"
        android:label="@string/your_lunch"
        tools:layout="@layout/fragment_restaurant_detail"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.dija.go4lunch.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

</navigation>