<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChatFragment">

    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/add_message_container">

        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/recycler_view_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_chat"
            android:textAlignment="center"
            android:layout_margin="16dp"/>

        <!-- RECYCLER VIEW -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- IMAGE CHOSEN PREVIEW -->
    <ImageView
        android:id="@+id/chat_image_chosen_preview"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_margin="16dp"
        android:layout_above="@id/add_message_container"/>

    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/add_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp">

        <!-- ADD FILE BUTTON -->
        <ImageButton
            android:id="@+id/activity_mentor_chat_add_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/add_circle_black"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <!-- TEXT MESSAGE EDIT TEXT -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chat_message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:hint="@string/write_your_message"/>

        <!-- ADD MESSAGE BUTTON -->
        <Button
            android:id="@+id/chat_send_button"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />

    </LinearLayout>

</RelativeLayout>
